--- a/lib/index/index.html
+++ b/lib/index/index.html
@@ -99,6 +99,7 @@
               <li><a href="/docs/services/postgresql.html">PostgreSQL</a></li>
               <li><a href="/docs/services/rabbitmq.html">RabbitMQ</a></li>
               <li><a href="/docs/services/redis.html">Redis</a></li>
+              <li><a href="/docs/services/using-services.html">about services</a></li>
             </ul>
           </div>
           <div class="doc-cards-item doc-cards-item_fuchsia">
@@ -110,6 +111,7 @@
               <li><a href="/docs/steps/after-steps.html">After steps</a></li>
               <li><a href="/docs/steps/creating-steps.html">Creating a step</a></li>
               <li><a href="/docs/steps/publishing-steps.html">Publishing a step</a></li>
+              <li><a href="/docs/steps/about-steps.html">about steps</a></li>
             </ul>
           </div>
           <div class="doc-cards-item doc-cards-item_red">
