build: add html

--- a/docs-html-base/index.html
+++ b/docs-html-base/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <template id="content"></template>
+    <template role="content"></template>
     <script src="/bundle.js"></script>
   </body>
 </html>
