docs-view-api: init view

--- a/docs-view-api/index.html
+++ b/docs-view-api/index.html
@@ -1,1 +1,49 @@
-<p>hello world!</p>
+<nav class="api-navigation">
+  <ul>
+    <li><a href="#">derp</a></li>
+    <li><a href="#">derp</a></li>
+    <li><a href="#">derp</a></li>
+    <li><a href="#">derp</a></li>
+    <li><a href="#">derp</a></li>
+  </ul>
+</nav>
+<main class="api-main">
+  <article class="api-article">
+    <section>
+      <h1>heading</h1>
+      <p>Bacon ipsum dolor amet sirloin spare ribs salami, shoulder tenderloin t-bone andouille landjaeger venison. Tongue pork chop biltong landjaeger shank meatball boudin tenderloin ham hock kielbasa. Pork belly chicken doner meatloaf. Boudin prosciutto bresaola doner, spare ribs shank pork chop filet mignon brisket ball tip pancetta beef rump. Capicola bresaola swine hamburger. Ribeye tri-tip pancetta jerky turkey shankle chicken sirloin.</p>
+    </section>
+    <figure>
+      <figcaption>api response to heading</figcaption>
+      <pre>console.derp(`
+   there was once a boy,
+   who had a toy,
+   oh the joy
+`)</pre>
+    </figure>
+  </article>
+  <article class="api-article">
+    <section>
+      <h1>my other heading</h1>
+      <p>Bacon ipsum dolor amet sirloin spare ribs salami, shoulder tenderloin t-bone andouille landjaeger venison. Tongue pork chop biltong landjaeger shank meatball boudin tenderloin ham hock kielbasa. Pork belly chicken doner meatloaf. Boudin prosciutto bresaola doner, spare ribs shank pork chop filet mignon brisket ball tip pancetta beef rump. Capicola bresaola swine hamburger. Ribeye tri-tip pancetta jerky turkey shankle chicken sirloin.</p>
+      <p>Bacon ipsum dolor amet sirloin spare ribs salami, shoulder tenderloin t-bone andouille landjaeger venison. Tongue pork chop biltong landjaeger shank meatball boudin tenderloin ham hock kielbasa. Pork belly chicken doner meatloaf. Boudin prosciutto bresaola doner, spare ribs shank pork chop filet mignon brisket ball tip pancetta beef rump. Capicola bresaola swine hamburger. Ribeye tri-tip pancetta jerky turkey shankle chicken sirloin.</p>
+      <p>Bacon ipsum dolor amet sirloin spare ribs salami, shoulder tenderloin t-bone andouille landjaeger venison. Tongue pork chop biltong landjaeger shank meatball boudin tenderloin ham hock kielbasa. Pork belly chicken doner meatloaf. Boudin prosciutto bresaola doner, spare ribs shank pork chop filet mignon brisket ball tip pancetta beef rump. Capicola bresaola swine hamburger. Ribeye tri-tip pancetta jerky turkey shankle chicken sirloin.</p>
+    </section>
+    <figure>
+      <figcaption>api response to heading</figcaption>
+      <pre>console.derp(`mucca pazza is Italian 
+for mad cow disease`)</pre>
+    </figure>
+  </article>
+  <article class="api-article">
+    <section>
+      <h1>and another one</h1>
+      <p>Bacon ipsum dolor amet sirloin spare ribs salami, shoulder tenderloin t-bone andouille landjaeger venison. Tongue pork chop biltong landjaeger shank meatball boudin tenderloin ham hock kielbasa. Pork belly chicken doner meatloaf. Boudin prosciutto bresaola doner, spare ribs shank pork chop filet mignon brisket ball tip pancetta beef rump. Capicola bresaola swine hamburger. Ribeye tri-tip pancetta jerky turkey shankle chicken sirloin.</p>
+      <p>Bacon ipsum dolor amet sirloin spare ribs salami, shoulder tenderloin t-bone andouille landjaeger venison. Tongue pork chop biltong landjaeger shank meatball boudin tenderloin ham hock kielbasa. Pork belly chicken doner meatloaf. Boudin prosciutto bresaola doner, spare ribs shank pork chop filet mignon brisket ball tip pancetta beef rump. Capicola bresaola swine hamburger. Ribeye tri-tip pancetta jerky turkey shankle chicken sirloin.</p>
+    </section>
+    <figure>
+      <figcaption>api response to heading</figcaption>
+      <pre>console.derp('hello')</pre>
+    </figure>
+  </article>
+</main>
